--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = clearkit
-version = 0.1
+version = 0.2-dev
 author = U. Melendez
 author_email = clearkitpy@bfjournal.com
 description = Complementary code for your programming pleasure
